--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,2 +1,5 @@
-1.0.1:
-    - Initialize plugin.
+v1.0.1:
+    - 'Initialize plugin.'
+v1.0.2:
+    - 'Created table yfktn_yfktnutil_revision'
+    - builder_table_create_yfktn_yfktnutil_revision.php
